grammar.js
    module: ($) => repeat($._statement),

    // MOJO: Modifiers
    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements (one per line or separated by semicolons)
    function_definition: ($) =>
      seq(
        optional("async"),
        field("keyword", "def"),
        field("name", $.identifier),
        optional(field("meta_parameters", $.meta_parameters)), // NEW: meta params
        field("parameters", $.parameters),
        optional(
          choice(
            seq(
              optional(seq("->", field("return_type", $.type))),
              repeat(field("modifiers", $.function_modifier)),
              optional(field("captures", $.capture_list)),
            ),
            seq(
              repeat1(field("modifiers", $.function_modifier)),
              optional(field("captures", $.capture_list)),
              optional(seq("->", field("return_type", $.type))),
            ),
            seq(
              repeat1(field("modifiers", $.function_modifier)),
              optional(seq("->", field("return_type", $.type))),
              optional(field("captures", $.capture_list)),
            ),
            seq(
              field("captures", $.capture_list),
              optional(seq("->", field("return_type", $.type))),
            ),
          ),
        ),
        optional(field("where_clause", $.where_clause)),
        ":",
        field("body", $._suite),
      ),

    where_clause: ($) =>
      repeat1(seq("where", field("constraint", $.expression))),

    // NEW: Meta parameters for compile-time generics [T: Type, N: Int]
    meta_parameters: ($) =>
      seq(
        "[",
        optional(
          seq(
            commaSep1(
              choice(
                $.meta_parameter,
                $.keyword_separator,
                $.positional_separator,
                $.infer_separator,
              ),
            ),
            optional(","),
          ),
        ),
        "]",
      ),

    meta_parameter: ($) =>
      seq(
        field(
          "name",
          choice(
            $.identifier,
            $.soft_keyword_identifier,
            $.list_splat_pattern,
            $.dictionary_splat_pattern,
          ),
        ),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("default", $.expression))),
      ),

    // Function effects supported by recent Mojo releases plus legacy capturing.
    function_modifier: ($) =>
      choice(
        seq("raises", optional($.type)),
        "thin",
        "capturing",
        prec(2, seq("capturing", "[", commaSep1($.expression), "]")),
        "register_passable",
        $.abi_effect,
      ),

    abi_effect: ($) => seq("abi", "(", $.string, ")"),

    // Parameters (runtime arguments)
    parameters: ($) => seq("(", optional($._parameters), ")"),

    _parameters: ($) => seq(commaSep1($.parameter), optional(",")),

    // NEW: Parameter with optional argument convention
    typed_parameter: ($) =>
      prec(
        PREC.typed_parameter + 10,
        seq(
          optional(field("convention", $.argument_convention)), // NEW: mut, var, etc.
          field(
            "name",
            choice(
              $.identifier,
              $.soft_keyword_identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
          ),
          ":",
          field("type", $.type),
        ),
      ),

    // NEW: Parameter with convention but no type (e.g., 'out self')
    convention_parameter: ($) =>
      prec.left(
        PREC.typed_parameter - 1,
        seq(
          field("convention", $.argument_convention),
          field("name", choice($.identifier, $.soft_keyword_identifier)),
        ),
      ),

    // NEW: Argument conventions
    argument_convention: ($) =>
      choice(
        "read",
        "imm",
        "mut",
        "var",
        "out",
        "deinit",
        "ref",
        prec(
          2,
          seq(
            "ref",
            "[",
            field("origin", choice($.expression, $.keyword_argument)),
            repeat(seq(",", choice($.expression, $.keyword_argument))),
            optional(","),
            "]",
          ),
        ),
        prec(
          2,
          seq(
            "out",
            "[",
            field("address_space", choice($.expression, $.keyword_argument)),
            repeat(seq(",", choice($.expression, $.keyword_argument))),
            optional(","),
            "]",
          ),
        ),
      ),

    capture_list: ($) =>
      seq("{", optional(seq(commaSep1($.capture_item), optional(","))), "}"),

    capture_item: ($) => choice($.capture_default, $.capture_binding),

    capture_default: (_) =>
      choice("read", "imm", "mut", "var", "out", "deinit", "ref"),

    capture_binding: ($) =>
      seq(
        optional(field("convention", $.capture_convention)),
        field("name", choice($.identifier, $.soft_keyword_identifier)),
        optional("^"),
      ),

    capture_convention: (_) =>
      choice("read", "imm", "mut", "var", "out", "deinit", "ref"),

    list_splat_pattern: ($) =>
      seq("*", choice($.identifier, $.soft_keyword_identifier)),

    expression_statement: ($) =>
      choice(
        $.expression,
        seq(commaSep1($.expression), optional(",")),
        $.assignment,
        $.augmented_assignment,
      ),

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => "pass",
    transfer_expression: ($) =>
      prec(PREC.transfer, seq(field("value", $.primary_expression), "^")),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $.expression),
            field("operator", "and"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $.expression),
            field("operator", "or"),
            field("right", $.expression),
          ),
        ),
      ),

    binary_operator: ($) => {
      /** @type {Array<[any, number, string]>} */
      const table = [
        [prec.left, PREC.plus, "+"],
        [prec.left, PREC.plus, "-"],
        [prec.left, PREC.times, "*"],
        [prec.left, PREC.times, "@"],
        [prec.left, PREC.times, "/"],
        [prec.left, PREC.times, "%"],
        [prec.left, PREC.times, "//"],
        [prec.right, PREC.power, "**"],
        [prec.left, PREC.bitwise_or, "|"],
        [prec.left, PREC.bitwise_and, "&"],
        [prec.left, PREC.xor, "^"],
        [prec.left, PREC.shift, "<<"],
        [prec.left, PREC.shift, ">>"],
      ];

      return choice(
        ...table.map(([fn, precedence, operator]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression),
            ),
          ),
        ),
      );
    },

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias(seq("not", "in"), "not in"),
                  "is",
                  alias(seq("is", "not"), "is not"),
                ),
              ),
              $.primary_expression,
            ),
          ),
        ),
      ),

    assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side),
          ),
        ),
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", choice($.identifier, $.string)),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          optional(
            seq(
              commaSep1(
                field(
                  "subscript",
                  choice(
                    $.expression,
                    $.slice,
                    $.keyword_argument,
                    $.list_splat,
                  ),
                ),
              ),
              optional(","),
            ),
          ),
          "]",
        ),
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) =>
      choice(
        $.function_type,
        // Type with argument convention (e.g., ref[origin] Type)
        seq(field("convention", $.argument_convention), $.expression),
        // Variadic splat type (e.g., *Ts)
        $.list_splat,
        // Regular type expression
        $.expression,
      ),

    function_type: ($) =>
      prec.right(
        seq(
          field("keyword", "def"),
          optional(field("meta_parameters", $.meta_parameters)),
          field("parameters", $.function_type_parameters),
          optional(
            choice(
              seq(
                optional(seq("->", field("return_type", $.type))),
                repeat(field("modifiers", $.function_modifier)),
                optional(field("captures", $.capture_list)),
              ),
              seq(
                repeat1(field("modifiers", $.function_modifier)),
                optional(field("captures", $.capture_list)),
                optional(seq("->", field("return_type", $.type))),
              ),
              seq(
                field("captures", $.capture_list),
                optional(seq("->", field("return_type", $.type))),
              ),
            ),
          ),
        ),
      ),

    function_type_parameters: ($) =>
      seq(
        "(",
        optional(
          seq(
            commaSep1(
              choice(
                $.type,
                $.typed_parameter,
                $.positional_separator,
                $.keyword_separator,
                $.infer_separator,
              ),
            ),
            optional(","),
          ),
        ),
        ")",
      ),

    // ====================
    // Literals and Patterns
    // ====================

    keyword_argument: ($) =>
      seq(
        field("name", choice($.identifier, $.keyword_identifier, $.string)),
        "=",
        field("value", choice($.expression, $.slice)),
      ),

    // Patterns (simplified)
    var_pattern: ($) => prec(25, seq("var", field("pattern", $.pattern))),

    tuple: ($) => seq("(", optional($._collection_elements), ")"),

    parenthesized_expression: ($) =>
      prec(PREC.parenthesized_expression, seq("(", $.expression, ")")),

    _collection_elements: ($) =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.list_splat,
            $.parenthesized_list_splat,
            $.keyword_argument,
          ),
        ),
        optional(","),
      ),

    lambda_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq(
          "lambda",
          optional(field("meta_parameters", $.meta_parameters)),
          optional(field("parameters", $.parameters)),
          repeat(field("modifiers", $.function_modifier)),
          optional(field("captures", $.capture_list)),
          optional(seq("->", field("return_type", $.type))),
          ":",
          field("body", $.expression),
        ),
      ),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $._string_content, $.escape_sequence)),
        $.string_end,
      ),

    integer: (_) =>
      token(
        choice(
          seq(
            choice("0x", "0X"),
            /[A-Fa-f0-9]+(_+[A-Fa-f0-9]+)*/,
            optional(/[Ll]/),
          ),
          seq(choice("0o", "0O"), /[0-7]+(_+[0-7]+)*/, optional(/[Ll]/)),
          seq(choice("0b", "0B"), /[0-1]+(_+[0-1]+)*/, optional(/[Ll]/)),
          seq(
            /[0-9]+(_+[0-9]+)*/,
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    identifier: (_) =>
      token(choice(/[_\p{XID_Start}][\p{XID_Continue}]*/u, /`[^`\r\n]+`/)),

    true: (_) => "True",
    none: (_) => "None",

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, repeat($._statement), $._dedent),
        alias($._newline, $.block),
      ),

    list_splat: ($) => seq("*", $.expression),

    argument_list: ($) =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument,
            ),
          ),
        ),
        optional(","),
        ")",
      ),
