test/corpus/functions_advanced.txt
================================================================================
Function with meta parameters
================================================================================

def generic[T: Copyable](value: T):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (meta_parameters
      (meta_parameter
        (identifier)
        (type
          (identifier))))
    (parameters
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (pass_statement)))

================================================================================
Function with multiple meta parameters
================================================================================

def process[T: Copyable, N: Int](data: T):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (meta_parameters
      (meta_parameter
        (identifier)
        (type
          (identifier)))
      (meta_parameter
        (identifier)
        (type
          (identifier))))
    (parameters
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (pass_statement)))

================================================================================
Function with meta parameter default
================================================================================

def create[N: Int = 4]():
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (meta_parameters
      (meta_parameter
        (identifier)
        (type
          (identifier))
        (integer)))
    (parameters)
    (pass_statement)))

================================================================================
Function with mut argument convention
================================================================================

def mutate(mut x: Int):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (typed_parameter
        (argument_convention)
        (identifier)
        (type
          (identifier))))
    (pass_statement)))

================================================================================
Function with var argument convention
================================================================================

def take_ownership(var x: String):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (typed_parameter
        (argument_convention)
        (identifier)
        (type
          (identifier))))
    (pass_statement)))

================================================================================
Function with out argument convention
================================================================================

def __init__(out self, value: Int):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (convention_parameter
        (argument_convention)
        (identifier))
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (pass_statement)))

================================================================================
Function with raises effect
================================================================================

def might_fail() raises:
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (function_modifier)
    (pass_statement)))

================================================================================
Function with explicit capture list
================================================================================

def create_closure() {ref x}:
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (capture_list
      (capture_item
        (capture_binding
          (capture_convention)
          (identifier))))
    (pass_statement)))

================================================================================
Function with empty capture list and return type
================================================================================

def add(x: Int, y: Int) {} -> Int:
    return x + y

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type
          (identifier)))
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (capture_list)
    (type
      (identifier))
    (return_statement
      (binary_operator
        (identifier)
        (identifier)))))

================================================================================
Function with ABI effect
================================================================================

def c_add(a: Int32, b: Int32) abi("C") -> Int32:
    return a + b

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type
          (identifier)))
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (function_modifier
      (abi_effect
        (string
          (string_start)
          (string_end))))
    (type
      (identifier))
    (return_statement
      (binary_operator
        (identifier)
        (identifier)))))

================================================================================
Thin function type annotation
================================================================================

def add_one(value: Int) -> Int:
    return value + 1

var fn_ptr: def(Int) thin -> Int = add_one

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type
          (identifier))))
    (type
      (identifier))
    (return_statement
      (binary_operator
        (identifier)
        (integer))))
  (expression_statement
    (assignment
      (var_pattern
        (identifier))
      (type
        (function_type
          (function_type_parameters
            (type
              (identifier)))
          (function_modifier)
          (type
            (identifier))))
      (identifier))))

================================================================================
Complex function with all beta features
================================================================================

def process[T: Copyable, N: Int](mut data: T, var buffer: String) raises {mut buffer, read} -> T:
    return data

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (meta_parameters
      (meta_parameter
        (identifier)
        (type
          (identifier)))
      (meta_parameter
        (identifier)
        (type
          (identifier))))
    (parameters
      (typed_parameter
        (argument_convention)
        (identifier)
        (type
          (identifier)))
      (typed_parameter
        (argument_convention)
        (identifier)
        (type
          (identifier))))
    (function_modifier)
    (capture_list
      (capture_item
        (capture_binding
          (capture_convention)
          (identifier)))
      (capture_item
        (capture_default)))
    (type
      (identifier))
    (return_statement
      (identifier))))

================================================================================
Async function
================================================================================

async def async_operation():
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (pass_statement)))

================================================================================
Call with compile-time function arguments
================================================================================

def kernel():
    pass

def launch(ctx):
    ctx.enqueue_function[kernel, kernel](grid_dim=1, block_dim=1)

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (pass_statement))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier))
    body: (expression_statement
      (call
        function: (subscript
          value: (attribute
            object: (identifier)
            attribute: (identifier))
          subscript: (identifier)
          subscript: (identifier))
        arguments: (argument_list
          (keyword_argument
            name: (identifier)
            value: (integer))
          (keyword_argument
            name: (identifier)
            value: (integer)))))))

================================================================================
Method call with compile-time arguments
================================================================================

def demo(a, c, d):
    a.b[c](d)

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier)
      (identifier))
    body: (expression_statement
      (call
        function: (subscript
          value: (attribute
            object: (identifier)
            attribute: (identifier))
          subscript: (identifier))
        arguments: (argument_list
          (identifier))))))

================================================================================
Function with where clause
================================================================================

def process[n: Int](data: SIMD[DType.float32, n]) -> Float32 where (n == 1 or n == 2):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    parameters: (parameters
      (typed_parameter
        name: (identifier)
        type: (type
          (subscript
            value: (identifier)
            subscript: (attribute
              object: (identifier)
              attribute: (identifier))
            subscript: (identifier)))))
    return_type: (type
      (identifier))
    where_clause: (where_clause
      constraint: (parenthesized_expression
        (boolean_operator
          left: (comparison_operator
            (identifier)
            (integer))
          right: (comparison_operator
            (identifier)
            (integer)))))
    body: (pass_statement)))

================================================================================
Function with ref argument convention without origin
================================================================================

def process(ref x: Int):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        convention: (argument_convention)
        name: (identifier)
        type: (type
          (identifier))))
    body: (pass_statement)))

================================================================================
Function with variadic splat compile-time and runtime parameters
================================================================================

def codegen_unreachable[cond: Bool, msg: StaticString, *extra: StaticString]():
    pass

def print_all[*Ts: Writable](*args: *Ts):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier)))
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier)))
      (meta_parameter
        name: (list_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    parameters: (parameters)
    body: (pass_statement))
  (function_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (list_splat_pattern
          (identifier))
        type: (type
          (identifier))))
    parameters: (parameters
      (typed_parameter
        name: (list_splat_pattern
          (identifier))
        type: (type
          (list_splat
            (identifier)))))
    body: (pass_statement)))

================================================================================
Function with raises effect specifying exception type
================================================================================

def might_fail() raises StopIteration:
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    modifiers: (function_modifier
      (type
        (identifier)))
    body: (pass_statement)))

================================================================================
Function parameter with subscript list splat type
================================================================================

def format_precompiled(compiled: _PrecompiledEntries[*Ts]):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        name: (identifier)
        type: (type
          (subscript
            value: (identifier)
            subscript: (list_splat
              (identifier))))))
    body: (pass_statement)))

================================================================================
Function with register_passable modifier and capture list
================================================================================

def test():
    def shift(x: Int) register_passable {var base} -> Int:
        pass

--------------------------------------------------------------------------------

(module
  (function_definition
    (identifier)
    (parameters)
    (function_definition
      (identifier)
      (parameters
        (typed_parameter
          (identifier)
          (type
            (identifier))))
      (function_modifier)
      (capture_list
        (capture_item
          (capture_binding
            (capture_convention)
            (identifier))))
      (type
        (identifier))
      (pass_statement))))

================================================================================
Function with parameterized out argument modifier
================================================================================

def init_mem(out[AddressSpace.GLOBAL] self):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (convention_parameter
        convention: (argument_convention
          address_space: (attribute
            object: (identifier)
            attribute: (identifier)))
        name: (identifier)))
    body: (pass_statement)))

================================================================================
Function with ref argument convention containing generic address space
================================================================================

def get_ptr(ref[origin, _] self):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (convention_parameter
        convention: (argument_convention
          origin: (identifier)
          (identifier))
        name: (identifier)))
    body: (pass_statement)))

================================================================================
Function with imm argument convention
================================================================================

def process(imm x: Int):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        convention: (argument_convention)
        name: (identifier)
        type: (type
          (identifier))))
    body: (pass_statement)))

================================================================================
Function with where clause and diagnostic message
================================================================================

def check[T: AnyType]() where (True, "diagnostic message"):
    pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    parameters: (parameters)
    where_clause: (where_clause
      constraint: (tuple
        (true)
        (string
          (string_start)
          (string_end))))
    body: (pass_statement)))

================================================================================
Lambda expressions with parameters, return type, and body
================================================================================

var inc = lambda (x: Int) -> Int: x + 1

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      left: (var_pattern
        pattern: (identifier))
      right: (lambda_expression
        parameters: (parameters
          (typed_parameter
            name: (identifier)
            type: (type
              (identifier))))
        return_type: (type
          (identifier))
        body: (binary_operator
          left: (identifier)
          right: (integer))))))

================================================================================
Lambda expressions without parameters
================================================================================

var f = lambda: None
var g = lambda -> Int: 42

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      left: (var_pattern
        pattern: (identifier))
      right: (lambda_expression
        body: (none))))
  (expression_statement
    (assignment
      left: (var_pattern
        pattern: (identifier))
      right: (lambda_expression
        return_type: (type
          (identifier))
        body: (integer)))))

================================================================================
Lambda expression with meta parameters and capture list
================================================================================

var f = lambda [T: Intable](x: T) {mut list}: list.append(x)

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      left: (var_pattern
        pattern: (identifier))
      right: (lambda_expression
        meta_parameters: (meta_parameters
          (meta_parameter
            name: (identifier)
            type: (type
              (identifier))))
        parameters: (parameters
          (typed_parameter
            name: (identifier)
            type: (type
              (identifier))))
        captures: (capture_list
          (capture_item
            (capture_binding
              convention: (capture_convention)
              name: (identifier))))
        body: (call
          function: (attribute
            object: (identifier)
            attribute: (identifier))
          arguments: (argument_list
            (identifier)))))))
